--- a/src/components/ContactSection/ContactSection.module.css
+++ b/src/components/ContactSection/ContactSection.module.css
@@ -1,5 +1,5 @@
 .section {
-  width: 100vw;
+  width: 100%;
   min-height: 85vh;
   display: flex;
   align-items: center;
