--- a/src/components/FeaturedProjects/FeaturedProjects.module.css
+++ b/src/components/FeaturedProjects/FeaturedProjects.module.css
@@ -1,5 +1,5 @@
 .container {
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
   display: flex;
   align-items: center;
