--- a/src/components/GithubSection/GithubSection.module.css
+++ b/src/components/GithubSection/GithubSection.module.css
@@ -1,5 +1,5 @@
 .container {
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
   background-color: var(--background);
   color: var(--foreground);
